# ChangeLog for x11-misc/e17genmenu
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/e17genmenu/ChangeLog,v 1.7 2005/10/17 23:07:26 vapier Exp $

*e17genmenu-4.1.4 (17 Oct 2005)

  17 Oct 2005; Mike Frysinger <vapier@gentoo.org> -e17genmenu-4.1.3.ebuild,
  +e17genmenu-4.1.4.ebuild:
  Version bump #109623.

*e17genmenu-4.1.3 (27 Sep 2005)

  27 Sep 2005; Mike Frysinger <vapier@gentoo.org> -e17genmenu-4.0.0.ebuild,
  +e17genmenu-4.1.3.ebuild:
  Version bump #107256.

*e17genmenu-4.0.0 (11 Sep 2005)

  11 Sep 2005; Mike Frysinger <vapier@gentoo.org> +e17genmenu-4.0.0.ebuild:
  Version bump #105507 by Brandon Slack.

*e17genmenu-3.0.3 (30 Aug 2005)

  30 Aug 2005; Mike Frysinger <vapier@gentoo.org> +e17genmenu-3.0.3.ebuild:
  Version bump.

*e17genmenu-2.0.2 (29 Jul 2005)

  29 Jul 2005; Mike Frysinger <vapier@gentoo.org> +e17genmenu-2.0.2.ebuild:
  Version bump as pointed out by GuYgUy.

*e17genmenu-2.0.1 (28 Jul 2005)

  28 Jul 2005; Mike Frysinger <vapier@gentoo.org> +e17genmenu-2.0.1.ebuild:
  Version bump.

*e17genmenu-0.1.7 (28 Apr 2005)

  28 Apr 2005; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by Bertrand Jacquin / Robert R. Richter #88113.