@@ -1,6 +1,6 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/e17genmenu/e17genmenu-4.1.4.ebuild,v 1.1 2005/10/17 23:07:26 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/e17genmenu/e17genmenu-4.2.0.ebuild,v 1.1 2006/01/05 04:55:01 vapier Exp $
 
 EKEY_STATE=live
 inherit enlightenment
@@ -13,3 +13,5 @@ DEPEND="dev-libs/engrave
 	dev-libs/eet
 	x11-libs/evas
 	x11-wm/e"
+
+S=${WORKDIR}/${PN}
