@@ -1,6 +1,12 @@
 # ChangeLog for x11-misc/e17genmenu
-# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/e17genmenu/ChangeLog,v 1.7 2005/10/17 23:07:26 vapier Exp $
+# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/e17genmenu/ChangeLog,v 1.8 2006/01/05 04:55:01 vapier Exp $
+
+*e17genmenu-4.2.0 (05 Jan 2006)
+
+  05 Jan 2006; Mike Frysinger <vapier@gentoo.org> -e17genmenu-4.1.4.ebuild,
+  +e17genmenu-4.2.0.ebuild:
+  Version bump for Bertrand Jacquin.
 
 *e17genmenu-4.1.4 (17 Oct 2005)
 
